--- a/NavigationAula/Assistir.storyboard
+++ b/NavigationAula/Assistir.storyboard
@@ -9,11 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Assistir-->
         <scene sceneID="IVU-uu-9Hu">
             <objects>
                 <navigationController restorationIdentifier="Assistir" storyboardIdentifier="Assistir" id="c9s-eT-MWe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" image="Polígono 2" selectedImage="Polígono 2" id="No4-dQ-SN1">
+                    <tabBarItem key="tabBarItem" title="Assistir" image="Polígono 2" selectedImage="Polígono 2" id="No4-dQ-SN1">
                         <color key="badgeColor" red="0.29803921570000003" green="0.1058823529" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBarItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
@@ -76,7 +76,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Polígono 2" width="23" height="25"/>
+        <image name="Polígono 2" width="23" height="25"/>
         <image name="seta" width="20" height="20"/>
     </resources>
 </document>
