Detail assistir view controller

--- a/NavigationAula/Assistir.storyboard
+++ b/NavigationAula/Assistir.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -69,14 +70,132 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Assistir" id="GSg-Z3-1m6"/>
+                    <connections>
+                        <segue destination="RwQ-5g-9HC" kind="show" identifier="assistirDetail" id="PSW-gA-d3m"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ElH-RV-zOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-247.82608695652175" y="-35.491071428571423"/>
         </scene>
+        <!--Assistir Detalhe View Controller-->
+        <scene sceneID="CcT-UY-xwi">
+            <objects>
+                <viewController id="RwQ-5g-9HC" customClass="AssistirDetalheViewController" customModule="NavigationAula" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PKn-CC-C5P">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xjY-cx-GP4">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellIdentifier" rowHeight="120" id="PW3-gK-xNJ" userLabel="CellIndentifier" customClass="CellEventos" customModule="NavigationAula" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PW3-gK-xNJ" id="T61-UN-Eaf">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="50" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="3Nz-hE-6Lb">
+                                                    <rect key="frame" x="20" y="25" width="100" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="Wha-gw-Sah"/>
+                                                        <constraint firstAttribute="width" constant="100" id="qxU-vJ-xDR"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="1xN-do-irN">
+                                                    <rect key="frame" x="128" y="34.5" width="240" height="51"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Introdução ao Acrobat" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QrN-U5-ODM">
+                                                            <rect key="frame" x="0.0" y="0.0" width="165.5" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Por Danilo" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZP-hs-ofk">
+                                                            <rect key="frame" x="0.0" y="20.5" width="58" height="14.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dM0-av-pVw">
+                                                            <rect key="frame" x="0.0" y="36" width="44" height="15"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star " translatesAutoresizingMaskIntoConstraints="NO" id="Z5D-f9-bMQ">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="15" id="AeU-fm-bnk"/>
+                                                                        <constraint firstAttribute="width" constant="15" id="p7x-ea-Hz0"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCH-Fb-zLZ">
+                                                                    <rect key="frame" x="23" y="0.0" width="21" height="15"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="8Bs-ob-sBR">
+                                                    <rect key="frame" x="376" y="36" width="18" height="48"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play-button-2" translatesAutoresizingMaskIntoConstraints="NO" id="OVz-7k-XEX">
+                                                            <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="18" id="vmV-5P-QHB"/>
+                                                                <constraint firstAttribute="width" constant="18" id="zgW-jB-Yby"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play-button-2" translatesAutoresizingMaskIntoConstraints="NO" id="vWI-Hb-ijS">
+                                                            <rect key="frame" x="0.0" y="26" width="18" height="22"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3Nz-hE-6Lb" firstAttribute="centerY" secondItem="T61-UN-Eaf" secondAttribute="centerY" id="33k-5F-Ibd"/>
+                                                <constraint firstItem="8Bs-ob-sBR" firstAttribute="leading" secondItem="1xN-do-irN" secondAttribute="trailing" constant="8" id="3Ck-6d-blW"/>
+                                                <constraint firstItem="1xN-do-irN" firstAttribute="leading" secondItem="3Nz-hE-6Lb" secondAttribute="trailing" constant="8" id="F5v-d4-qsn"/>
+                                                <constraint firstItem="1xN-do-irN" firstAttribute="centerY" secondItem="T61-UN-Eaf" secondAttribute="centerY" id="IFI-ve-Rjl"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="8Bs-ob-sBR" secondAttribute="trailing" id="ZhN-Ci-fVP"/>
+                                                <constraint firstItem="8Bs-ob-sBR" firstAttribute="centerY" secondItem="T61-UN-Eaf" secondAttribute="centerY" id="dEX-tV-HeV"/>
+                                                <constraint firstItem="3Nz-hE-6Lb" firstAttribute="leading" secondItem="T61-UN-Eaf" secondAttribute="leadingMargin" id="oOE-4Q-fj8"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <accessibilityTraits key="traits" button="YES"/>
+                                        </accessibility>
+                                        <connections>
+                                            <outlet property="descricao" destination="UZP-hs-ofk" id="cs3-uH-i9N"/>
+                                            <outlet property="imagem" destination="3Nz-hE-6Lb" id="2iF-6n-Hpc"/>
+                                            <outlet property="title" destination="QrN-U5-ODM" id="zi9-Qm-F7x"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="gwE-SB-u4f"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="fqr-tf-JbN"/>
+                    <connections>
+                        <outlet property="navItem" destination="fqr-tf-JbN" id="ZRj-EC-3gL"/>
+                        <outlet property="tableView" destination="xjY-cx-GP4" id="AaW-II-QIE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="08a-sA-zdU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="540.57971014492762" y="-35.491071428571423"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Polígono 2" width="23" height="25"/>
+        <image name="Star " width="18.5" height="17"/>
+        <image name="play-button-2" width="22" height="22"/>
         <image name="seta" width="20" height="20"/>
     </resources>
 </document>
