--- a/NavigationAula/Assistir.storyboard
+++ b/NavigationAula/Assistir.storyboard
@@ -234,7 +234,7 @@
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZHV-Nf-gy9">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Like 2" translatesAutoresizingMaskIntoConstraints="NO" id="ZHV-Nf-gy9">
                                 <rect key="frame" x="20" y="430" width="20" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -282,6 +282,7 @@
     </scenes>
     <resources>
         <image name="Fotolia_120871392_Subscription_Monthly_XXL" width="539" height="359"/>
+        <image name="Like 2" width="16" height="17"/>
         <image name="Polígono 2" width="23" height="25"/>
         <image name="Star " width="18.5" height="17"/>
         <image name="play-button-2" width="22" height="22"/>
